tests/ui/traits/reservation-impl/no-use.next.stderr
error[E0277]: the trait bound `(): MyTrait` is not satisfied
  --> $DIR/no-use.rs:11:26
   |
LL |     <() as MyTrait>::foo(&());
   |     -------------------- ^^^ the trait `MyTrait` is not implemented for `()`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `MyTrait` is implemented for `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
